--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -10,17 +10,17 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "ejs": "^2.5.9",
+    "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.1",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.1.2",
+    "morgan": "^1.9.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.5"
   }
 }
